Squashed 'Firmware/fibre-cpp/' changes from 38b7c9cb..767bcb32
767bcb32 compile using dockerfile
87b176ad fix ci
e437cb48 enable more tests
d2568b3d initial formatting checks
7d332a9a move files
f3e635ee add fibre.cpp
c3e661e8 update libfibre API for better performance
d2cc6513 make fibre-js play nice with ES6 Modules, address review comments
32ac247f update binaries
192319ba initial Fibre-JS implementation
ecfac0c3 update readme
fd257a6f support registering external discoverers
8cbe8b7d add WebAssembly buiid target
ea9a59e0 use tup to compile libfibre
1a8cecd6 support open-ended function calls in libfibre ABI
5b9f55cc move gitattributes for LFS settings
92e1fe6e Merge commit 'e345a021e39fd3d6ea56297e9c6c647e8d144992' as 'cpp'
7a40ccf0 remove old cpp folder
d7a5c366 reduce libfibre binary size
b7bf7d1b don't close protocol while TX still in progress
72fa6186 fix use-after-free bug
e5561dd4 fix CI
344ff447 fix CI errors
860f960f add finishing touches to initial libfibre version
11a86c7e Merge pull request #10 from RoCkaZ/master
2e2226f6 Only set new timeout if it is different from the old one
dc2bea4a introduce codecs for serializing/deserializing
677f3686 Merge commit '5a7cad54ad0bed99edcdf19704d5116a9993caa6' into sam_fibre_upstreaming
1ada8977 TCP: keep alive
fd46431e improve logging
b9a249a2 fix timeout error code for macOS
d9f0f539 remove install-time PySerial dependency and don't fail if installed as non-root
d27ff81b printing format strings
a75dce81 fix shell printing
1544230c clean up fiber port
25c2bb34 fix include paths, duplicated function in merge
3661fdaf Merge branch 'devel' into sam_fibre
55d50e97 Merge commit '496a9a945a8d8bbdda556a41f784cb30ebf6eeea'
7d2df781 add timeout to UDP transport
808f3f0c split protocol.hpp into more files
a8931e85 Merge remote-tracking branch 'origin/master'
e87ae1dd minor bugfixes
56ccd7c4 Merge commit '2e15116dc21a4ff859b906410dec8c797955c0ec'
565cd9d4 Merge commit 'd2ca264d0a3f7eab82498880a8a1929380e0ce75'
0996d4eb replac

--- a/interfaces_template.j2
+++ b/interfaces_template.j2
@@ -12,7 +12,7 @@
 #ifndef __FIBRE_INTERFACES_HPP
 #define __FIBRE_INTERFACES_HPP
 
-#include <fibre/protocol.hpp>
+#include <fibre/../../protocol.hpp>
 
 #pragma GCC push_options
 #pragma GCC optimize ("s")
@@ -23,7 +23,7 @@ void
 [%- elif func.out | length == 1 -%]
 [[(func.out.values() | first).type.c_name]]
 [%- else -%]
-[% for arg in func.out.values() %][[arg.type]][[', ' if not loop.last]][% endfor %]
+std::tuple<[% for arg in func.out.values() %][[arg.type.c_name]][[', ' if not loop.last]][% endfor %]>
 [%- endif -%]
 [%- endmacro %]
 
