--- a/Firmware/fibre-cpp/interfaces_template.j2
+++ b/Firmware/fibre-cpp/interfaces_template.j2
@@ -36,7 +36,7 @@ public:
 [[render_interface(intf) | indent(4)]]
 [%- endfor %]
 [%- for enum in intf.enums %]
-    enum [[enum.name | to_pascal_case]] {
+    enum [[enum.name | to_pascal_case]] : int64_t {
 [%- for k, value in enum['values'].items() %]
         [[((enum.name | to_macro_case) + "_" + (k | to_macro_case)).ljust(32)]] = [% if enum.is_flags %]0x[['%08x' | format(value.value)]][% else %][[value.value]][% endif %],
 [%- endfor %]
